# fast-query-parsers

./: Cargo.toml  pyproject.toml
src/: lib.rs
tests/: test_parse_qs.py
