[package]
name = "fast_query_parsers"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "Ultra-fast query string and url-encoded form-data parsers"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/starlite-api/fast-query-parsers"
version = "1.0.3"
edition = "2021"

[lib]
name = "fast_query_parsers"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pythonize = "0.26.0"
regex = { version = "1.12.2", features = ["perf"] }
rustc-hash = "2.1.1"
serde_json = "1.0.145"
urlencoding = "2.1.3"
